<resources>
    <string name="app_name">App Chat</string>
    <string name="welcome_to_easy_chat">Welcome to EasyChat</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="friend">Friend</string>
    <string name="user">User</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_agroup">CreateAGroupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="see_group_members">See group members</string>
    <string name="quick_emotions">Quick Emotions</string>
    <string name="delete_chat">Delete chat</string>
    <string name="block">Block</string>
    <string name="theme">Theme</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is my channel</string>
    <string name="online">Online</string>
    <string name="conversation_background">Conversation background</string>
    <string name="choose_a_theme">Choose a theme</string>
    <string name="click_to_change_the_picture">Click to change the picture</string>
    <string name="change_avatar_successfully">Change avatar successfully</string>
    <string name="choose_quick_emotions">Choose quick Emotions 😜</string>
    <string name="your_emotion">Your emotion</string>
    <string name="emoji">Emoji</string>
    <string name="save">Save</string>
    <string name="changed_wallpaper_successfully">Changed wallpaper successfully</string>
    <string name="emotion_set_to">Emotion set to </string>
    <string name="successful_emotional_change">Successful emotional change</string>
    <string name="changed_wallpaper">Changed wallpaper</string>
    <string name="leave_the_conversation">Leave the conversation</string>
    <string name="settings">Settings</string>
    <string name="light_and_dark_mode">Light and dark mode</string>
    <string name="active_status">Active status</string>
    <string name="change_password">Change password</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="recent_searches">Recent searches</string>
    <string name="suggested">Suggested</string>
    <string name="list_friends">List Friends</string>
    <string name="members">Members</string>
    <string name="customization">Customization</string>
    <string name="text_detail">🍉</string>
    <string name="nicknames">Nicknames</string>
    <string name="word_effects">Word effects</string>
    <string name="info_chat">Info chat</string>
    <string name="move_action">Move action</string>
    <string name="create_a_chat_group">Create a chat group</string>
    <string name="search_in_conversation">Search in conversation</string>
    <string name="notification_and_sounds">Notification and sounds</string>
    <string name="privacy_and_support">Privacy and support</string>
    <string name="restrict">Restrict</string>
    <string name="conversation_name">Conversation Name</string>
    <string name="add_avatar">Add Avatar</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="or">OR</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="edit_image">Edit Image</string>
    <string name="background_conversation">Background conversation</string>
    <string name="you_are_not_friends_yet">You are not friends yet</string>
    <string name="message">Message</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_the_6_digit_code_sent_to_your_phone_number">Please enter the 6-digit code sent to your phone number</string>
    <string name="did_not_receive_an_opt">Didn\'t receive an OPT?</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="time_detail">00:00</string>
    <string name="phone_number">Phone number: </string>
    <string name="number_detail">0123456789</string>
    <string name="choose_people">Choose people</string>
    <string name="avatar_conversation">Avatar conversation</string>
    <string name="image_message">Image message</string>
    <string name="new_group">New group</string>
    <string name="create">Create</string>
    <string name="group_name_required">Group Name (Required)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Registration</string>
    <string name="login_account">Login Account</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="unable_to_sign_in">Unable to sign in</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="sign_up_success">Sign Up Success</string>
    <string name="the_verification_code_entered_was_invalid">The verification code entered was invalid</string>
    <string name="password_and_confirm_password_must_be_same"><![CDATA[Password & confirm password must be same]]></string>
    <string name="account_successfully_created">Account successfully created</string>
    <string name="contact">Contact</string>
    <string name="done">Done</string>
    <!--    <string name=""-->
</resources>