<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@color/gray_100">
    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_telegram"
        android:contentDescription="@string/avatar_conversation"/>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/imageAvatar"
        android:layout_toStartOf="@id/imageMessageImage"
        android:orientation="vertical"
       >
        <TextView
            android:id="@+id/textViewTitleCustomNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Compat.Notification.Title"
            android:text="@string/app_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewNameSender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Compat.Notification.Info" />
            <TextView
                android:id="@+id/textViewMessageCustomNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                style="@style/TextAppearance.Compat.Notification.Info"
                android:text="@string/app_name" />
        </LinearLayout>

    </LinearLayout>
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageMessageImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        app:riv_corner_radius="@dimen/_15sdp"
        android:contentDescription="@string/image_message"/>
</RelativeLayout>