<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_content_top">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">
        <TextView
            android:id="@+id/textCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="@dimen/_18ssp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />
        <TextView
            android:id="@+id/textNewGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_group"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/textCancel"
            android:layout_toStartOf="@id/textCreateGroup"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/textCreateGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/gray_500"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            />

        <EditText
            android:id="@+id/inputNameGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:background="@drawable/bg_input_none"
            android:hint="@string/group_name_required"
            android:textColorHint="#aeaeae"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:layout_below="@id/textNewGroup"/>

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:background="@drawable/bg_input"
            android:hint="@string/search"
            android:textColorHint="#C9C9C9"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:drawableStart="@drawable/ic_search_24"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableTint="@color/gray"
            android:layout_below="@id/inputNameGroup"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/usersCheckerRcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

            android:layout_below="@id/inputSearch"/>
        <TextView
            android:id="@+id/textSuggested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggested"
            android:textColor="#aeaeae"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_below="@id/usersCheckerRcv"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/usersRcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_below="@id/textSuggested"/>

        <!--        <FrameLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_marginTop="@dimen/_3sdp"-->
        <!--            android:background="@drawable/bg_content"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/inputSearch">-->


        <!--            <ProgressBar-->
        <!--                android:id="@+id/progressBar"-->
        <!--                android:layout_width="@dimen/_25sdp"-->
        <!--                android:layout_height="@dimen/_25sdp"-->
        <!--                android:layout_gravity="center"/>-->

        <!--            <TextView-->
        <!--                android:id="@+id/textErrorMessage"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="center"-->
        <!--                android:layout_marginStart="@dimen/_24sdp"-->
        <!--                android:layout_marginEnd="@dimen/_24sdp"-->
        <!--                android:gravity="center"-->
        <!--                android:textColor="@color/error"-->
        <!--                android:textSize="@dimen/_12sdp"-->
        <!--                android:visibility="gone" />-->

        <!--        </FrameLayout>-->

    </RelativeLayout>


</ScrollView>